# TokenUsageInsights

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  Makefile  PRODUCT.md  README.en.md  README.md  pricing.csv
.agents/skills/bump-and-release/: SKILL.md
.agents/skills/bump-and-release/agents/: openai.yaml
.github/workflows/: release.yml
.impeccable/: design.json
docs/: PLAN-copilot-app-collector.md
scripts/: build.ps1  get.ps1  get.sh  install.ps1  install.sh  test-install-backfill.sh  test-windows.ps1
shell/: statusline-token.ps1  token-usage-insights.service
shell/antigravity/: statusline-token.ps1  statusline-token.sh
shell/copilot/: statusline-token.ps1  statusline-token.sh
src/: db.rs  grok.rs  handlers.rs  main.rs  paths.rs  pricing.rs  timeline.rs  vscode.rs
src/handlers/: codex.rs  daily.rs  misc.rs  mod.rs  monthly.rs  yearly.rs
static/: app.js  chart-utils.js  i18n.js  index.html  styles.css
static/css/: components.css  redesign.css  timeline.css  variables.css
static/flags/: README.md
tasks/: lessons.md  todo.md
