[package]
name = "token-usage-insights"
version = "0.4.1"
edition = "2021"
default-run = "token-usage-insights"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
dirs = "5.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
